# exact-cover-solver

./: .coveragerc  .gitignore  .python-version  Dockerfile  Dockerfile-dev  Dockerfile-perf-tests  Pipfile  README.md  pyproject.toml  pypy3.7-7.3.3  setup.cfg  tasks.py
.github/workflows/: docs.yml  lint.yml  performance.yml  test.yml
docs/: custom_types.html  index.html  index.md  maarittely.md  main.html  main.md  testaus.md  toteutus.md  types.html
docs/algos/: algox_base.html  dictx.html  dlx.html  index.html  index.md
docs/data_creators/: data_creator_base.html  generic_creator.html  index.html  pentomino_creator.html  sudoku_creator.html
docs/datastructures/: dictmatrix.html  dlxdataobjects.html  dlxmatrix.html  dlxmatrix.md  index.html  matrix_base.html  pentomino.html
docs/exact_cover_solver/: index.html
docs/raportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md
docs/services/: index.html  index.md  pentomino_browser.html  pentomino_generator.html  solver.html
docs/translator/: index.html
docs/ui/: index.html  index.md  menu.html  nav.html  pentomino_view.html  view.html  welcome_view.html
docs/utils/: index.html  pentomino_generator.html
exact_cover_solver/: __init__.py  main.py  types.py
exact_cover_solver/algos/: __init__.py  algox_base.py  dictx.py  dlx.py
exact_cover_solver/data_creators/: __init__.py  data_creator_base.py  generic_creator.py  pentomino_creator.py  (+2 more)
performance_tests/: main.py  test_pentominoes_with_dlx.py  test_solver.py
scripts/: cov.sh  docs.sh  lint.sh
src/: main.py
web/: Dockerfile  README.md
web/server/: pyproject.toml  server.py  start.sh
(+69 files in other folders)
