[tool.poetry]
name = "exact-cover-solver"
version = "0.1.0"
description = "Exact cover solver for Helsinki University datastructures and algorithms project course"
authors = ["Otto Ahoniemi <otto@ottoahoniemi.fi>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-docstrings = "^1.5.0"
pytest-cov = "^2.10.1"
pdoc3 = "^0.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
