[tool.poetry]
name = "exact-cover-solver"
version = "0.1.0"
description = "Exact cover solver library"
authors = ["Otto Ahoniemi <otto@ottoahoniemi.fi>"]

[tool.poetry.dependencies]
python = ">=3.6.9,<4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-docstrings = "^1.5.0"
flake8-annotations = "^2.4.1"
pytest-cov = "^2.10.1"
pdoc3 = "^0.9.2"
invoke = "^1.4.1"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
